# xray2clash_rust_local

./: .gitignore  Cargo.toml  LICENSE  README.md
presets/: README.md  ai.yaml  android.yaml  devtools.yaml  github.yaml  google.yaml  media.yaml  productivity.yaml  social.yaml
src/: converter.rs  lib.rs  main.rs  models.rs  parser.rs  preset.rs  profile.rs  whitelist.rs
tests/: integration_test.rs
